--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "displayName": "DinoGen",
   "publisher": "AbhishekMondal",
   "description": "Generate code from provided text using GenAI",
-  "version": "0.0.1",
-  "icon": "./Res/logo.png",
+  "version": "0.0.2",
+  "icon": "Res/logo.png",
   "engines": {
     "vscode": "^1.80.0"
   },
